--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <div class="container-hero">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-button">Order Service</button>
+        </div>
       </section>
 
       <section class="features">
         <h2 class="features-title">Features</h2>
-        <ul>
+        <ul class="features-item">
           <li class="features-strategy">
             <h3 class="features-subtitle">Strategy</h3>
             <p class="features-text">
